change privileges and home page

--- a/ControlMyGames/Views/Friends/Index.cshtml
+++ b/ControlMyGames/Views/Friends/Index.cshtml
@@ -4,6 +4,14 @@
     ViewData["Title"] = "Index";
 }
 
+<meta name="viewport" content="width=device-width" />
+<title>Index</title>
+<meta charset="utf-8" />
+<link href="~/Content/jquery-ui.css" rel="stylesheet" />
+<link href="~/Content/jquery-ui.theme.css" rel="stylesheet" />
+<script src="~/Scripts/jquery.js"></script>
+<script src="~/Scripts/jquery-ui.js"></script>
+
 <h2>Index</h2>
 
 <p>
