--- a/ControlMyGames/Views/Friends/Details.cshtml
+++ b/ControlMyGames/Views/Friends/Details.cshtml
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Person</h4>
+    <h4>Friend</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -34,3 +34,4 @@
     <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+
