--- a/ControlMyGames/Views/Shared/_Layout.cshtml
+++ b/ControlMyGames/Views/Shared/_Layout.cshtml
@@ -30,10 +30,13 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Games" asp-action="Index">Games</a></li>
-                    <li><a asp-area="" asp-controller="Friends" asp-action="Index">Friends</a></li>
-                    <li><a asp-area="" asp-controller="Rents" asp-action="Index">Rent</a></li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                        <li><a asp-area="" asp-controller="Games" asp-action="Index">Games</a></li>
+                        <li><a asp-area="" asp-controller="Friends" asp-action="Index">Friends</a></li>
+                        <li><a asp-area="" asp-controller="Rents" asp-action="Index">Rent</a></li>
+                    }
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
